welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:40: error: value Green is not a member of object java.awt.Color
    c=Color.Green
            ^